--- a/style.css
+++ b/style.css
@@ -18,52 +18,58 @@ body, html {
 .first{
     display: flex;
     justify-content: space-around;
-    width: 40%;
+    width: 600px;
+    height:9.63%;
 }
 
 .title {
     background-color: #fff;
     color: #000;
-    width: 700px;
+    width: 70%;
+
     padding: 20px;
     text-align: center;
-    font-size: 72px;
+    font-size: 24px;
     border: 8px solid rgb(218, 181, 32);
 }
 
 .point {
     background-color: #fff;
     color: #000;
-    width: 300px;
+    width: 30%;
+
     padding: 20px;
     text-align: center;
-    font-size: 72px;
+    font-size: 24px;
     border: 8px solid rgb(218, 181, 32);
 }
 
 .start {
     background-color: #fdf79e;
     color: #000;
+    justify-content: space-between;
     width: 700px;
+    height:9.73%;
     padding: 20px;
     text-align: center;
-    font-size: 72px;
+    font-size: 24px;
     border: 8px solid rgb(218, 181, 32);
     cursor: pointer;
 }
 
 .slots {
     display: flex;
-    justify-content: space-between;
-    width: 35%;
+    align-content: space-around;
+    width: 675px;
+    height: 41.75%
 }
 
 .slot1, .slot2, .slot3 {
     background-color: #ffffff;
     color: #000000;
-    border: 10px solid goldenrod;
+    border: 6px solid goldenrod;
     padding: 240px 60px;
-    font-size: 100px;
+    font-size: 24px;
     text-align: center;
     cursor: pointer;
     flex-grow: 1;
@@ -75,5 +81,5 @@ body, html {
 }
 
 .blank{
-    height:80px;
+    height:5.59%;
 }
