--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body, html {
 
 .first{
     display: flex;
+    align-items: center;
     justify-content: space-around;
     width: 600px;
     height:9.63%;
@@ -30,6 +31,7 @@ body, html {
     padding: 20px;
     text-align: center;
     font-size: 24px;
+    height:40%;
     border: 8px solid rgb(218, 181, 32);
 }
 
@@ -41,6 +43,7 @@ body, html {
     padding: 20px;
     text-align: center;
     font-size: 24px;
+    height:40%;
     border: 8px solid rgb(218, 181, 32);
 }
 
